Changes :

* Allocated a TypeId range for use in the Gaffer project.

Bug fixes :

* SOP_ParameterisedHolder properly handles the GIL before using the CapturingRenderer.

* Fixed crashes which could be triggered by passing a python unicode string with non-ascii characters into Cortex.

Cortex 6.1.2
============

Additions :

* IECoreGL::Renderer class now supports the "gl:visibility:camera" attribute.

Bug fixes :

* PointDistributionOp density parameter no longer accepts negative values.

* RelativePreset was creating unnecessary data for empty class parameters and not working if there was no differences at all.

* Fixed a maya 2010 crash triggered by deep levels of nesting in parameter uis.

* Fixed a bug in the IECoreRI::Renderer, causing incorrect results when querying projection matricies

Cortex 6.1.1
============

Additions :

* Added support in python for the minSequenceSize argument for IECore.findSequence function. Defaults to 2, which was the original behaviour.

Improvements :

Changes :

* SOP_InterpolatedCache attempts to account for doubled endpoints from CurvesPrimitives when applying a cache.

Bug Fixes :

* ToHoudiniCurvesConverter returns false rather than a seg fault when asked to convert and un-buildable curve.

Cortex 6.1.0
============

Additions :

* Added RelativePreset class. Can be used to apply parameter changes on similar Parameterised objects.

* Added PkgConfig configuration file, generated on install.

Improvements :

* Improved the appearance of parameter user interfaces in Maya 2011 and 2012.

* MeshMergeOp will merge PrimitiveVariables from either the input mesh or the secondary mesh. It also optionally ignores variables that don't exist on both meshes or fills the data with default values.

Changes :

Bug Fixes :

* Fixed build bug which meant that the binary component of the IECoreNuke python module wasn't built unless "install" was in the SCons command.
