@@ -8,6 +8,8 @@ Bug fixes :
 
 * Fixed crashes which could be triggered by passing a python unicode string with non-ascii characters into Cortex.
 
+* Fixed bug with conversion of normals in ToMayaMeshConverter.
+
 Cortex 6.1.2
 ============
 
